@@ -1,14 +1,17 @@
 #!/bin/sh
+
 set -e
 
-## DB format changed between beta 1 and 2
-#if [ "$1" = "upgrade" ] || [ "$1" = "install" ] && \
-#	dpkg --compare-versions "$2" lt-nl "9.4~beta2"; then
-#    if pg_lsclusters -h | grep -q '^9.4'; then
-#	echo "ERROR: The database format changed between beta 1 and 2. Please dump your 9.4 clusters first and remove them, before attempting to upgrade the package." >&2
-#	exit 1
-#    fi
-#fi
+MAJOR_VER="${DPKG_MAINTSCRIPT_PACKAGE#postgresql-}"
+CATVERSION="@CATVERSION@" # set by override_dh_installdeb
+
+case $1 in
+    install|upgrade)
+        if [ "$2" ]; then
+            . /usr/share/postgresql-common/maintscripts-functions
+            preinst_check_catversion "$MAJOR_VER" "$CATVERSION"
+        fi ;;
+esac
 
 #DEBHELPER#
 
